# unitial-assessment

./: Dockerfile  LICENSE  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/models/: schemas.py
app/processing/: analysis.py
data/: data.json  machines.json  output.json
tests/: test_api.py
