[project]
name = "unitial-assessment"
version = "0.1.0"
description = "A mini project to process data and show some KPIs as an assessment for Unitial."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.7",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
